# opencc-rs

./: Cargo.toml
benches/: performance.rs
src/: config.rs  conversion.rs  conversion_chain.rs  converter.rs  dict.rs  dict_entry.rs  error.rs  lexicon.rs  lib.rs  segmentation.rs  serialized_values.rs  simple_converter.rs
src/dict/: group.rs  marisa.rs  text.rs
src/tools/: command_line.rs  dict_converter.rs
