[package]
name = "opencc-rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "opencc-rs"
path = "src/tools/command_line.rs"

[[bin]]
name = "opencc-dict-rs"
path = "src/tools/dict_converter.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
rsmarisa = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.0"
thiserror = "2.0"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "performance"
harness = false

[profile.release]
lto = true
opt-level = 3
