[package]
name = "opencc-rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "opencc-rs"
path = "src/tools/command_line.rs"
required-features = ["tools"]

[[bin]]
name = "opencc-dict-rs"
path = "src/tools/dict_converter.rs"
required-features = ["tools"]

[dependencies]
libc = "0.2"
rsmarisa = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

# tools
clap = { version = "4.5", optional = true, features = ["derive"] }
tempfile = { version = "3.0", optional = true }

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "performance"
harness = false

[features]
default = []
tools = ["dep:clap", "dep:tempfile"]

[profile.release]
lto = true
opt-level = 3
